# dataclass-wizard

./: .bumpversion.toml  .coveragerc  .editorconfig  .env  .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  meta.yaml  meta.yml  pyproject.toml  pytest.ini  requirements-bench.txt  requirements-dev.txt  requirements-test.txt  run_bench.py  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
.github/workflows/: dev.yml  release.yml
benchmarks/: catch_all.py  complex.py  conftest.py  nested.py  simple.py
dataclass_wizard/: __init__.py  __version__.py  _abstractions.py  _abstractions.pyi  _bases.py  _bases.pyi  _bases_meta.py  _bases_meta.pyi  _class_helper.py  _class_helper.pyi  _decorators.py  _decorators.pyi  _dumpers.py  _dumpers.pyi  _env.py  _env.pyi  _lazy_imports.py  _loaders.py  _loaders.pyi  _log.py  _log.pyi  _meta_cache.py  _meta_cache.pyi  _mixins.py  _mixins.pyi  _models.py  _models.pyi  _models_date.py  _models_date.pyi  _path_util.py  _path_util.pyi  _properties.py  _properties.pyi  _public.py  _sentinels.py  _serial_json.py  _serial_json.pyi  _type_conv.py  _type_conv.pyi  _type_def.py  (+48 more)
dataclass_wizard/cli/: cli.py  schema.py
dataclass_wizard/environ/: __init__.py  dumpers.py  env_wizard.py  loaders.py  lookups.py  lookups.pyi  wizard.py  wizard.pyi
dataclass_wizard/mixins/: __init__.py  json.py  json.pyi  toml.py  toml.pyi  yaml.py  yaml.pyi
dataclass_wizard/utils/: _dataclass_compat.py  _dataclass_compat.pyi  _dict_helper.py  _dict_helper.pyi  _function_builder.py  _function_builder.pyi  _lazy_loader.py  _lazy_loader.pyi  _object_path.py  _object_path.pyi  _string_case.py  _string_case.pyi  _string_conv.py  _string_conv.pyi  _typing_compat.py  _typing_compat.pyi  code_builder.py  containers.py  containers.pyi  dataclass_compat.py  dict_helper.py  function_builder.py  json_util.py  lazy_loader.py  object_path.py  object_path.pyi  string_conv.py  type_check.py  type_conv.py  type_helper.py  typing_compat.py  wrappers.py
dataclass_wizard/v0/: __init__.py  __version__.py  abstractions.py  abstractions.pyi  bases.py  bases_meta.py  bases_meta.pyi  class_helper.py  class_helper.pyi  constants.py  decorators.py  dumpers.py  errors.py  loader_selection.py  loaders.py  log.py  models.py  models.pyi  parsers.py  serial_json.py  serial_json.pyi  wizard_mixins.py  wizard_mixins.pyi
dataclass_wizard/v0/environ/: dumpers.py  wizard.py
dataclass_wizard/v0/utils/: function_builder.py  json_util.py  object_path.py  object_path.pyi  string_conv.py  type_conv.py
dataclass_wizard/v1/: __init__.py  _env.py  _env.pyi  _path_util.py  decorators.py  dumpers.py  enums.py  env.py  env.pyi  loaders.py  models.py  models.pyi  path_util.py  path_util.pyi  type_conv.py
dataclass_wizard/wizard_cli/: cli.py  schema.py
docs/: Makefile  conf.py  dataclass_wizard.environ.rst  dataclass_wizard.rst  dataclass_wizard.utils.rst  dataclass_wizard.v1.rst  dataclass_wizard.wizard_cli.rst  env_magic.rst  env_magic_v1.rst  envwizard_v1_migration.rst  examples.rst  index.rst  installation.rst  make.bat  modules.rst  overview.rst  python_compatibility.rst  quickstart.rst  requirements.txt  usage.rst  using_field_properties.rst  wiz_cli.rst
docs/_static/: custom.css  dark_mode.css  dark_mode_toggle.js
docs/_templates/: hacks.html  sidebar_modindex.html  sidebarintro.html
docs/advanced/: common_use_cases.rst  serializer_hooks.rst  type_hooks.rst
docs/advanced_usage/: index.rst  serializer_hooks.rst  type_hooks.rst
docs/common_use_cases/: custom_key_mappings.rst  custom_types.rst  cyclic_or_recursive_dataclasses.rst  dataclasses_in_union_types.rst  easier_debug_mode.rst  handling_unknown_json_keys.rst  index.rst  meta.rst  nested_key_paths.rst  patterned_date_time.rst  print_the_str.rst  serialization_options.rst  skip_inheritance.rst  skip_the_str.rst  v0_nested_key_paths.rst  v0_patterned_date_time.rst  v1_alias.rst  v1_patterned_date_time.rst  wizard_mixins.rst
recipe/: meta.yaml
tests/: _typing.py  conftest.py
tests/integration/: __init__.py
tests/integration/benchmarks/: complex.py  nested.py  simple.py
tests/testdata/: star_wars.json  test1.json  test2.json  test3.json  test4.json  test5.json  test6.json  test7.json  test8.json
tests/unit/: __init__.py  conftest.py  models.py  test_bases_meta.py  test_dump.py  test_e2e.py  test_env_wizard.py  test_frozen_inheritance.py  test_hooks.py  test_load.py  test_load_with_future_import.py  test_loaders.py  test_mixins.py  test_models.py  test_parsers.py  test_property_wizard.py  test_property_wizard_with_future_import.py  test_union_as_type_alias_recursive.py  test_wizard.py  test_wizard_cli.py  test_wizard_mixins.py  utils_env.py
tests/unit/FIXME/: test_dump.py  test_load.py
tests/unit/environ/: .env.prod  .env.test  test_dumpers.py  test_e2e.py  test_loaders.py  test_lookups.py  test_wizard.py
tests/unit/utils/: test_containers.py  test_lazy_loader.py  test_string_case.py  test_string_conv.py  test_type_check.py  test_typing_compat.py
tests/unit/v0/: conftest.py  test_bases_meta.py  test_dump.py  test_frozen_inheritance.py  test_hooks.py  test_load.py  test_load_with_future_import.py  test_models.py  test_parsers.py  test_property_wizard.py  test_property_wizard_with_future_import.py  test_wizard_cli.py  test_wizard_mixins.py
tests/unit/v0/environ/: .env.prefix  test_dumpers.py  test_loaders.py  test_lookups.py  test_wizard.py
tests/unit/v1/: models.py  test_dump.py  test_e2e.py  test_hooks.py  test_loaders.py  test_union_as_type_alias_recursive.py  utils_env.py
tests/unit/v1/environ/: .env.prefix  .env.test  test_dumpers.py  test_e2e.py  test_loaders.py  test_wizard.py
wizard_cli/: schema.py
