[bumpversion]
current_version = 0.26.0
commit = True
tag = True

[bumpversion:file:dataclass_wizard/__version__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[options.package_data]
# If any package or subpackage contains *.txt, *.rst, *.md, or py.typed files, include them:
* = *.txt, *.rst, *.md, py.typed

[tool:pytest]
collect_ignore = ['setup.py']
